@@ -1,3 +1,7 @@
+2006-03-31  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* lily/pango-font.cc (pango_item_string_stencil): update from 2.9.x
+
 2006-03-30  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
 	* lily/ttf.cc (print_trailer): only print existing glyphs. 
